--- a/scss/_codePopup.scss
+++ b/scss/_codePopup.scss
@@ -2,10 +2,16 @@
     overflow: hidden;
     .imgHolder{
         max-height: 400px;
-        overflow-y: scroll;
+        overflow-y: scroll !important;
         box-sizing: content-box;
         width: calc(100% + 18px);
         //border-radius: 3px;
+        @media screen and (max-height:600px){
+            max-height: 200px;
+        }
+        @media screen and (max-height:400px){
+            max-height: 100px;
+        }
     }
 }
 
