--- a/scss/_projectPopup.scss
+++ b/scss/_projectPopup.scss
@@ -31,6 +31,15 @@
     img{
         width: 100%;
     }
+    .imgHolder{
+        @media screen and (max-height:600px){
+            max-height: 200px;
+        }
+        @media screen and (max-height:400px){
+            max-height: 100px;
+        }
+        overflow: hidden;
+    }
     .TextHolder, .LinkHolder{
         padding: $gutter;
         padding-bottom: 0;
